--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-     <!-- Bootstrap -->
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-     <!-- Google Fonts -->
+    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
-     <link rel="icon" type="image/png" href="./imagenes/IMG-20250805-WA0040.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./imagenes/IMG-20250805-WA0040.png"
+    />
   </head>
   <body>
     <div id="root"></div>
